# saga

./: .gitignore  README.md  pyproject.toml  requirements.txt  story_dashboard.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
analysis/: event_extractor.py  identity_analyzer.py  scene_analyzer.py  scene_extractor.py
docs/: ARCHITECTURE.md  DASHBOARD.md  JSON_CONTRACT.md  TESTING.md
entities/: entity_registry_service.py
infrastructure/: llm_client.py
prompts/: causal_graph_prompt.py
query/: story_query_service.py
rag/: scene_index_service.py  story_index_service.py
services/: epub_processor.py  pdf_processor.py  series_processor.py
state/: canon_state_service.py  state_transition_service.py
tests/: __init__.py  test_causal_graph.py  test_identity_analyzer.py  test_identity_query.py  test_scene_analyzer.py  test_scene_pipeline.py  test_state_services.py
timeline/: causal_graph_metrics.py  causal_graph_service.py  causal_graph_validator.py  character_identity_service.py  character_normalizer.py  character_timeline_service.py  timeline_service.py
